20-rules/main.tf
resource "aws_security_group_rule" "Bastion_Internet" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  # security_group_id = "sg-123456"
  security_group_id = local.bastion_sg_id
}

resource "aws_security_group_rule" "Monogodb_Bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  #cidr_blocks       = ["0.0.0.0/0"]
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.mongo_sg_id
}

resource "aws_security_group_rule" "Monogodb_Catalogue" {
  type              = "ingress"
  from_port         = 27017
  to_port           = 27017
  protocol          = "tcp"
  #cidr_blocks       = ["0.0.0.0/0"]
  source_security_group_id = local.catalogue_sg_id
  security_group_id = local.mongo_sg_id
}

resource "aws_security_group_rule" "Monogodb_User" {
  type              = "ingress"
  from_port         = 27017
  to_port           = 27017
  protocol          = "tcp"
  #cidr_blocks       = ["0.0.0.0/0"]
  source_security_group_id = local.user_sg_id
  security_group_id = local.mongo_sg_id
}

resource "aws_security_group_rule" "redis_Bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  #cidr_blocks       = ["0.0.0.0/0"]
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.redis_sg_id
}

resource "aws_security_group_rule" "mysql_Bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  #cidr_blocks       = ["0.0.0.0/0"]
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.mysql_sg_id
}
